[FIX] sap.m.MenuButton - text is vertically aligned correctly now
Problem: The MenuButton text was not correctly aligned compared to Button text

Solution: align the text, add visual example

BCP: 2380068721

--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/MenuButton.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/MenuButton.less
@@ -45,13 +45,6 @@
 	opacity: @sapUiContentDisabledOpacity;
 }
 
-.sapMMenuBtn .sapMBtn:not(.sapMSBArrow) .sapMBtnInner .sapMBtnIcon,
-.sapMMenuBtn .sapMBtn:not(.sapMSBArrow) .sapMBtnInner .sapMBtnContent {
-	position: relative;
-	top: 0.0625rem;
-	left: 0.0625rem;
-}
-
 .sapMIBar .sapMMenuBtn.sapMMenuBtnRegular .sapMBtnInner.sapMBtnTransparent::after,
 .sapMIBar .sapMMenuBtn.sapMMenuBtnRegular .sapMBtnInner.sapMBtnDefault::after,
 .sapMMenuBtn.sapMMenuBtnRegular .sapMBtnInner.sapMBtnTransparent::after,
